--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
   <body id="body">
     <section id="profile">
       <img id="pictureUrl" src="https://mokmoon.com/images/ic_liff.png" />
+      <h1>HI EJS</h1>
       <p id="userId"></p>
       <p id="displayName"></p>
       <p id="statusMessage"></p>
       <p id="email"></p>
     </section>
 
-    <section id="feature"></section>
+    <section id="feature">
+      <p id="code"></p>
+    </section>
 
-    <section id="button"></section>
+    <section id="button">
+      <button id="btnScanCode">Scan Code</button>
+      <button id="btnShare">Share Target Picker</button>
+      <button id="btnSend">Send Message</button>
+      <button id="btnOpenWindow">Open Window</button>
+      <button id="btnLogIn">Log In</button>
+      <button id="btnLogOut">Log Out</button>
+    </section>
   </body>
 </html>
